tpc vubec netusim co delam

--- a/index.html
+++ b/index.html
@@ -1,48 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hello World</title>
-    <style>
-        body {
-            background-color: #ffe6f2; /* light pink background */
-            color: #ff3385; /* pink text color */
-        }
-        header {
-            background-color: #ff3385; /* pink header background */
-            color: #fff; /* white text color */
-            padding: 10px;
-            text-align: center;
-        }
-        main {
-            padding: 20px;
-        }
-        footer {
-            background-color: #ff3385; /* pink footer background */
-            color: #fff; /* white text color */
-            padding: 10px;
-            text-align: center;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
-        }
-    </style>
-</head>
-<body>
-    <header>
-        <h1>Hello World</h1>
-    </header>
-    
-    <main>
-        <article>
-            <h2>First Post</h2>
-            <p>Dobré ráno čuráci</p>
-        </article>
-    </main>
-
-    <footer>
-        <p>&copy;All rights reserved, bitches.</p>
-    </footer>
-</body>
-</html>
+---
+layout: default
+title: fajny bober
+---
+ <h1>{{ "Hello World!" | downcase }}</h1>
+ 
