better barvicky, text even

--- a/index.html
+++ b/index.html
@@ -4,4 +4,14 @@
 
 layout: home
 ---
-<img src="https://http.cat/images/102.jpg" alt="WIP im sorry">
+
+<center><img src="https://http.cat/images/102.jpg" alt="WIP im sorry" width=500>
+<br>
+<br>
+<br>
+
+<h1>Welcome to my neverending WIP.</h1>
+The pages are a mess. The structure is almost nonexistent. There is no game - there's almost no text even. Enjoy the stolen cats and my lack of ability to pick one language for the whole site. 
+<br> <br>
+<img src="http://edgecats.net" alt="random cat"/>
+</center>
