category pages + minor changes

--- a/_posts/2024-08-03-testing.html
+++ b/_posts/2024-08-03-testing.html
@@ -2,6 +2,6 @@
 layout: post
 title:  "throwing science at the wall"
 date:   2024-08-03 20:48 +0200
-categories: jekyll update
+categories: jekyll update random
 ---
 just testing if two of them will work.
