--- a/blog.html
+++ b/blog.html
@@ -5,12 +5,25 @@ title: Blog
 <h1>Latest Posts</h1>
 
 <ul>
-  {% for post in site.posts %}
+  {% for post in site.posts limit:5 %}
     <li>
       <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
       {{ post.excerpt }}
-      <br>
-      <br>
+    <br> <br>
     </li>
   {% endfor %}
+</ul>
+<hr>
+<br> <br> <br>
+
+<h1>Categories</h1>
+<ul>
+{% for category in site.categories %}
+  <h2><li><a href="/{{ category[0] }}">{{ category[0] }}</a></li></h2>
+    <ul>
+    {% for post in category[1] %}
+      <li><a href="{{ post.url }}">{{ post.title }}</a></li>
+    {% endfor %}
+    </ul>
+{% endfor %}
 </ul>
